--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 		        <li><a href="#home" class="active">Home</a></li>
 		        <li><a href="#about">Our Story</a></li>
 		        <li><a href="#services">Advice</a></li>
-		        <li><a href="#portfolio">Images</a></li>
+		        <li><a href="#portfolio">Potato</a></li>
 		        
 		        <li><a href="#blog">Latest News</a></li>
 		     
